# fogml_sdk

./: CMakeLists.txt  library.json
anomaly/: fogml_anomaly.c
anomaly_rt/: fogml_lof.c
dsp/: fogml_dsp.c
dsp/kissfft/: _kiss_fft_guts.h  kiss_fft.c  kiss_fftr.c
internal/: fogml_helper.c  fogml_helper.h
ports/: fogml_ports_linux.c  fogml_ports_riscv.c
